Preliminary support for LMDBStore